<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment"
    android:fillViewport="true"
    android:layout_marginTop="?android:attr/actionBarSize">

    <!-- android:background="@color/Bisque" -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/prviRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@mipmap/kasica_prasica_logo_round" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/drugiRed"
        android:layout_below="@id/prviRed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/unos"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:background="@drawable/custom_button"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:layout_gravity="center"
            android:text="@string/withdrawal"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:background="@drawable/custom_button"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:layout_gravity="center"
            android:text="@string/stanje"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:background="@drawable/custom_button"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:layout_gravity="center"
            android:text="@string/savings"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:background="@drawable/custom_button"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:layout_gravity="center"
            android:text="@string/my_banks"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:background="@drawable/custom_button"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:background="@drawable/custom_button"/>

    </LinearLayout>

    <!--<LinearLayout
        android:id="@+id/treciRed"
        android:layout_below="@id/drugiRed"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">



    </LinearLayout>-->

    </RelativeLayout>

</ScrollView>